welcome.lessons.welcome.bdr.BDR.scala.code
avr fini:Bool = false
while (!fini) {
  avance()
} 